# th-updater

./: .gitignore  README.md  build.bat  config.yml  pyproject.toml
th_updater/: __main__.py
th_updater/backend/: artifact.py  config.py  engine.py  exception.py  filesys.py  web.py
th_updater/ui/: app.py
