[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nuitka>=1.3.8",
    "ordered-set>=4.1.0",
    "zstandard>=0.19.0",
    "autopep8>=2.0.1",
]

[project]
name = "th_updater"
version = "1.0.0"
description = "TH Mod Updater and Launcher"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "requests>=2.28.2",
    "pyyaml>=6.0",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
